perf: add dat type
